Fixing some layout wrapping issues

--- a/css/index.css
+++ b/css/index.css
@@ -621,7 +621,7 @@ section.even-more-info .quote-and-portrait.warren {
 section.even-more-info .quote-and-portrait.warren .portrait {
     margin: 0 0 0 40px;
     position: relative;
-    width: 310px;
+    width: 290px;
 }
 section.even-more-info .quote-and-portrait.warren .quote {
     max-width: 100%;
@@ -650,7 +650,7 @@ section.even-more-info .quote-and-portrait.weingarten {
 section.even-more-info .quote-and-portrait.weingarten .portrait {
     margin: 0 0 0 40px;
     position: relative;
-    width: 310px;
+    width: 290px;
 }
 section.even-more-info .quote-and-portrait.weingarten .quote {
     max-width: 100%;
